applications/gatekeeper-constraints/constraints.yaml
# Goals:
# - Identify containers that do not have a memory request (but might actually need a significant amount of memory)
# - By setting memory request, have control over likelyhood of pod being evicted due to memory pressure
# - Effectively we want our end-user applications to be less likely to be evicted
# See: https://kubernetes.io/docs/concepts/scheduling-eviction/node-pressure-eviction/#pod-selection-for-kubelet-eviction
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: container-must-have-memory-request
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    excludedNamespaces:
      - argocd
      - external-secrets
      - kube-*
      - newrelic
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    requests:
      - memory
